--- a/index.html
+++ b/index.html
@@ -41,12 +41,16 @@
     </style>
 </head>
 <body>
-    <h1>📚 Cronograma Interativo — Matrizes e Geometria Analítica (GA)</h1>
+    <h1>📚 Cronograma — Matrizes e Geometria Analítica (GA)</h1>
     <p><strong>Período:</strong> 27/03/2025 a 05/05/2025</p>
     <p><strong>Apostila:</strong> Prof. Fabiano Borges da Silva (UNESP)</p>
 
-    <h2>✅ Instruções</h2>
-    <p>Expanda as semanas abaixo e marque os tópicos que você já estudou. O progresso será salvo automaticamente no seu navegador.</p>
+    <div style="margin-top:2rem;">
+        <label for="progressBar"><strong>📊 Progresso Total:</strong></label>
+        <div style="background-color: #eee; border-radius: 20px; overflow: hidden; height: 24px; width: 100%; margin: 0.5rem 0;">
+            <div id="progressBar" style="height: 100%; width: 0%; background-color: #3498db; text-align: center; color: white; line-height: 24px;">0%</div>
+        </div>
+    </div>
 
     <div class="section">
         <details>
@@ -117,14 +121,6 @@
                 <li><input type="checkbox" id="c27"> 05/05 - Revisão final + tira-dúvidas</li>
             </ul>
         </details>
-    </div>
-
-    <div class="note">📝 O progresso será salvo no seu navegador automaticamente. Você pode fechar e voltar mais tarde!</div>
-    <div style="margin-top:2rem;">
-        <label for="progressBar"><strong>📊 Progresso Total:</strong></label>
-        <div style="background-color: #eee; border-radius: 20px; overflow: hidden; height: 24px; width: 100%; margin: 0.5rem 0;">
-            <div id="progressBar" style="height: 100%; width: 0%; background-color: #3498db; text-align: center; color: white; line-height: 24px;">0%</div>
-        </div>
     </div>
 
     <script>
