--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Cronograma Interativo – GA</title>
+    <title>Cronograma – GA</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, sans-serif;
@@ -43,7 +43,6 @@
 <body>
     <h1>📚 Cronograma — Matrizes e Geometria Analítica (GA)</h1>
     <p><strong>Período:</strong> 27/03/2025 a 05/05/2025</p>
-    <p><strong>Apostila:</strong> Prof. Fabiano Borges da Silva (UNESP)</p>
 
     <div style="margin-top:2rem;">
         <label for="progressBar"><strong>📊 Progresso Total:</strong></label>
@@ -52,7 +51,7 @@
         </div>
     </div>
 
-    <br><br>
+    <br>
 
     <div class="section">
         <details>
