--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </style>
 </head>
 <body>
-    <h1>📚 Cronograma — Matrizes e Geometria Analítica (GA)</h1>
+    <h1>📚 Cronograma — Geometria Analítica e Cálculo Vetorial</h1>
     <p><strong>Período:</strong> 27/03/2025 a 05/05/2025</p>
 
     <div style="margin-top:2rem;">
